[package]
name = "eas-env"
version = "0.1.0"
edition = "2021"
authors = ["Henry Paulino <me@henrypl.com>"]
description = "A simple CLI tool to manage environment variables for Expo projects."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
serde_json = "1.0"
colored = "2.0"
clap = { version = "4.5.3", features = ["derive"] }
